--- a/style.css
+++ b/style.css
@@ -106,8 +106,24 @@ button {
 }
 
 .info img {
-  border: 5px solid #3882F6;
+  border: 3px solid #3882F6;
   border-radius: 8px;
+}
+
+.quote {
+  background-color: #E5E7EB;
+  color: #1F2937;
+  font-size: 36px;
+  font-style: italic;
+  font-weight: lighter;
+  padding: 32px 240px;
+}
+
+.customer {
+  text-align: right;
+  font-size: 24px;
+  font-weight: bold;
+  font-style: normal;
 }
 
 .footer {
